Fix code spacing

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,43 +1,37 @@
 @font-face {
-    font-family: myFont;
-    src:url(../fonts/apple_garamond/AppleGaramond.ttf)
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond.otf)*/
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond.otf)*/
+  font-family: myFont;
+  src:url(../fonts/apple_garamond/AppleGaramond.ttf)
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond.otf)*/
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond.otf)*/
 }
 
 @font-face {
-    font-family: myFont-Italic;
-    src:url(../fonts/apple_garamond/AppleGaramond-Italic.ttf)
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond-Italic.otf) */
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond-Italic.otf)*/
+  font-family: myFont-Italic;
+  src:url(../fonts/apple_garamond/AppleGaramond-Italic.ttf)
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond-Italic.otf) */
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond-Italic.otf)*/
 }
 
 @font-face {
-    font-family: Poppins;
-    src:url(../fonts/Poppins/Poppins-Regular.ttf)
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond-Italic.otf) */
-    /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond-Italic.otf)*/
+  font-family: Poppins;
+  src:url(../fonts/Poppins/Poppins-Regular.ttf)
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-BookCond-Italic.otf) */
+  /*src:url(fonts/ITCGaramondStd/ITCGaramondStd-LtCond-Italic.otf)*/
 }
 
 * {
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
-    /*font-family: Poppins, myFont, Arial;*/
-    font-family: myFont, Arial;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+  /*font-family: Poppins, myFont, Arial;*/
+  font-family: myFont, Arial;
+  scroll-behavior: smooth;
 }
 
 :root {
-  
   --dark-hue:rgb(42, 81, 81);
   --medium-hue: rgb(31, 115, 115);
   --light-hue: rgb(29, 189, 168);
-  /*
-  --dark-hue:#0f5959;
-  --medium-hue: #28977e;
-  --light-hue: #45ddb6;
-  */
   --font-gray-2: rgba(256, 256, 256, 0.7);
   --font-gray: rgb(175, 175, 175);
   --light-gray: rgb(124, 124, 124);
@@ -48,26 +42,26 @@
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 body::-webkit-scrollbar {
-    display:none;
+  display:none;
 }
 
 .background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 270vh;
-    background-color: black;
-    z-index: -100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 270vh;
+  background-color: black;
+  z-index: -100;
 }
 
 .main_btn {
